<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/layoutLinearTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="363dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/txtNumEmp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/numEmp"
                android:inputType="text"
                android:minHeight="48dp"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text"
                android:minHeight="48dp"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/txtApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/apellidos"
                android:inputType="text"
                android:minHeight="48dp"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/txtSueldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sueldo"
                android:inputType="text"
                android:minHeight="48dp"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/btnAgregar"
                android:layout_width="9dp"
                android:layout_height="47dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                tools:srcCompat="@android:drawable/ic_menu_add" />

            <ImageButton
                android:id="@+id/btnBuscar"
                android:layout_width="9dp"
                android:layout_height="47dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                tools:srcCompat="?android:attr/actionModeWebSearchDrawable" />

            <ImageButton
                android:id="@+id/btnActualizar"
                android:layout_width="9dp"
                android:layout_height="47dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                tools:srcCompat="@android:drawable/ic_popup_sync" />

            <ImageButton
                android:id="@+id/btnEliminar"
                android:layout_width="9dp"
                android:layout_height="47dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                tools:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

            <Button
                android:id="@+id/btnLista"
                android:layout_width="65dp"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:text="@string/lista" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>